<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/donateFragment"
            android:title="@string/action_donate"
            android:icon="@drawable/ic_menu_donate"/>
        <item
            android:id="@+id/reportFragment"
            android:title="@string/action_report"
            android:icon="@drawable/ic_menu_report"/>
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/action_share"
                android:icon="@drawable/ic_menu_share"/>
            <item
                android:id="@+id/nav_send"
                android:title="@string/action_send"
                android:icon="@drawable/ic_menu_send"/>
            <item
                android:id="@+id/nav_about"
                android:title="@string/action_about"
                android:icon="@drawable/ic_about_us"/>
        </menu>
    </item>
</menu>